--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@
     box-sizing: border-box;
     color: blue;
 }
+body
+{
+    width: 100vw;
+    height: 100vh;
+    background: lightgrey;
+}
+form
+{
+    height: 90%;
+    padding-top: 20px;
+    max-width: 620px;
+    margin: 20px auto;
+    background: white;
+    border-radius: 10px;
+}
 h2, h3
 {
     max-width: 600px;
@@ -79,5 +94,7 @@ h2
 .caixas div
 {
     display: flex;
+    gap: 5px;
+    justify-content: center;
     flex-wrap: wrap;
 }
